Receive Prometheus alerts from Alertmanager and sends them to Telegram

--- a/tox.ini
+++ b/tox.ini
@@ -30,5 +30,5 @@ whitelist_externals = poetry
 commands=
     poetry install -v
 
-    poetry run flake8 apollo tests
-    poetry run mypy apollo tests
+    poetry run flake8 src/apollo tests
+    poetry run mypy src/apollo tests
