--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,16 +4,16 @@ build-backend = "poetry.masonry.api"
 
 [tool.poetry]
 name = "apollo"
-version = "0.0.1"
-description = "Proof of concept"
+version = "0.0.0"
+description = "General purpose telegram bot"
 authors = ["Kirill Sumorokov <sumorokov.k@gmail.com>"]
 packages = [
     { include = "apollo", from = "src" },
 ]
 
 [tool.poetry.dependencies]
-aiohttp-metrics = {git = "https://github.com/clayman74/aiohttp-metrics.git", rev = "v0.1.2"}
-aiohttp-micro = {git = "https://github.com/clayman74/aiohttp-micro.git", rev = "v0.2.6"}
+aiohttp-metrics = {git = "https://github.com/clayman083/aiohttp-metrics.git", rev = "v0.1.3"}
+aiohttp-micro = {git = "https://github.com/clayman083/aiohttp-micro.git", rev = "v0.2.8"}
 python = "^3.8"
 
 [tool.poetry.dev-dependencies]
