--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,13 @@
 {
   "files.exclude": {
-      ".eggs": true,
-      ".mypy_cache": true,
-      ".tox": true,
-      ".vscode": true,
-      "*.egg-info": true,
-      "*.lock": true,
-      ".coverage": true,
-      "build": true
+    ".eggs": true,
+    ".mypy_cache": true,
+    ".tox": true,
+    ".vscode": true,
+    "*.egg-info": true,
+    "*.lock": true,
+    ".coverage": true,
+    "build": true
   },
 
   "python.linting.enabled": true,
@@ -17,14 +17,19 @@
   "python.testing.pytestEnabled": true,
   "python.testing.pytestArgs": ["tests"],
 
-  "python.pythonPath": "${workspaceFolder}/.venv/bin/python3.8",
+  "python.pythonPath": "${workspaceFolder}/.venv/bin/python3.9",
   "python.autoComplete.extraPaths": [
       "${workspaceFolder}",
-      "${workspaceFolder}/.venv/lib/python3.8",
-      "${workspaceFolder}/.venv/lib/python3.8/site-packages"
+      "${workspaceFolder}/.venv/lib/python3.9",
+      "${workspaceFolder}/.venv/lib/python3.9/site-packages"
+  ],
+  "python.analysis.extraPaths": [
+      "${workspaceFolder}",
+      "${workspaceFolder}/.venv/lib/python3.9",
+      "${workspaceFolder}/.venv/lib/python3.9/site-packages"
   ],
 
   "[python]": {
-      "editor.formatOnSave": true
+    "editor.formatOnSave": true
   }
 }
