--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,8 +17,7 @@ jobs:
           architecture: 'x64'
 
       - name: Install requirements
-        # Устанавливаем зависимости
-        run: pip install pipenv tox
+        run: pip install poetry tox
 
       - name: Run tests
         run: tox
